[gd_scene load_steps=2 format=3 uid="uid://swp6joc5oy07"]

[ext_resource type="Script" uid="uid://bevtcakdhf3u" path="res://Scripts/Map Maker Scripts/MapMaker.gd" id="1_gxdgs"]

[node name="MapNamer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gxdgs")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="NameInput" type="TextEdit" parent="CanvasLayer"]
offset_left = 644.0
offset_top = 383.0
offset_right = 1171.0
offset_bottom = 450.0
placeholder_text = "Map Name"

[node name="ContinueButton" type="Button" parent="CanvasLayer"]
offset_left = 1644.0
offset_top = 962.0
offset_right = 1854.0
offset_bottom = 1028.0
theme_override_font_sizes/font_size = 40
text = "Continue"

[node name="Back Button" type="Button" parent="CanvasLayer"]
offset_left = 65.0
offset_top = 952.0
offset_right = 230.0
offset_bottom = 1020.0
theme_override_font_sizes/font_size = 40
text = "< Back"

[node name="FileDialog" type="FileDialog" parent="CanvasLayer"]
title = "Open a File"
initial_position = 1
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.mp3")
use_native_dialog = true

[node name="Music Select Button" type="Button" parent="CanvasLayer"]
offset_left = 720.0
offset_top = 495.0
offset_right = 1052.0
offset_bottom = 566.0
theme_override_font_sizes/font_size = 35
text = "Select Music File"

[node name="Warnings" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 790.0
offset_top = 759.0
offset_right = 1200.0
offset_bottom = 1023.0
alignment = 1

[node name="Preexist Warning" type="Label" parent="CanvasLayer/Warnings"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Map Already Exists"
horizontal_alignment = 1

[node name="No Name Warning" type="Label" parent="CanvasLayer/Warnings"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "No Name Input"
horizontal_alignment = 1

[node name="Invalid File Warning" type="Label" parent="CanvasLayer/Warnings"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Invalid File Type"
horizontal_alignment = 1

[node name="No Music Warning" type="Label" parent="CanvasLayer/Warnings"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "No File Selected"
horizontal_alignment = 1

[node name="AudioLoader" type="AudioStreamPlayer2D" parent="."]

[connection signal="pressed" from="CanvasLayer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Back Button" to="." method="_on_back_button_pressed"]
[connection signal="file_selected" from="CanvasLayer/FileDialog" to="." method="FileChosen"]
[connection signal="pressed" from="CanvasLayer/Music Select Button" to="." method="MusicSelectButtonPressed"]
